# repo-gardener

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/repo_gardener/: __init__.py  __main__.py  analyzer.py  cli.py  scorers.py
src/repo_gardener.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/repo_gardener/generators/: __init__.py  readme.py
tests/: test_analyzer.py
